<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>br.edu.ufcg.ccc</groupId>
	<artifactId>submission</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>
	<name>Submissao de roteiro</name>

<pluginRepositories>
		<pluginRepository>
			<id>ufcg-maven2</id>
			<url>http://web.cloud.lsd.ufcg.edu.br:44174/nexus/content/repositories/br.edu.ufcg</url>
			<layout>default</layout>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>auto-clean</id>
						<phase>build</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- PARA LIMPAR OS MPORTS QUE NAO SAO UTILIZADOS -->			
			<plugin>
				<groupId>org.walkmod</groupId>
				<artifactId>maven-walkmod-plugin</artifactId>
				<version>1.3</version>
				<configuration>
					<configFile>walkmod.xml</configFile>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>apply</goal>
						</goals>
						<configuration>
							<skipWalkmod>false</skipWalkmod>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>br.edu.ufcg.ccc</groupId>
				<artifactId>leda-compactor-tool</artifactId>
				<version>1.0.0-SNAPSHOT</version>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>compact</goal>
						</goals>
						<configuration>
							<matricula>115111906</matricula>
							<semestre>2016.1</semestre>
							<roteiro>R17-02</roteiro>
							<url>http://web.cloud.lsd.ufcg.edu.br:44174/submission/submitRoteiro</url>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
